--- a/trunk/Kademlia/KademliaTester/app.config
+++ b/trunk/Kademlia/KademliaTester/app.config
@@ -30,10 +30,10 @@
     </client>
     <extensions>
       <bindingElementExtensions>
-        <add name="UpdTransportElement" type="UdpBinding.UdpTransportElement, UdpTransport" />
+        <add name="UpdTransportElement" type="UdpBinding.UdpTransportElement, UdpBinding" />
       </bindingElementExtensions>
       <bindingExtensions>
-        <add name="NetUdpBinding" type="UdpBinding.UdpBindingCollectionElement, UdpTransport" />
+        <add name="NetUdpBinding" type="UdpBinding.UdpBindingCollectionElement, UdpBinding" />
       </bindingExtensions>
     </extensions>
   </system.serviceModel>
