--- a/trunk/WebServer/App.config
+++ b/trunk/WebServer/App.config
@@ -2,48 +2,27 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="WCFServiceHost.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="WCFServiceHost.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <appSettings>
-    <add key="ThreadPoolSize" value="10"/>
-    <add key="ChunkLength" value="60"/>
-    <add key="ClientSettingsProvider.ServiceUri" value=""/>
+    <add key="ThreadPoolSize" value="10" />
+    <add key="ChunkLength" value="60" />
   </appSettings>
   <system.web>
     <compilation debug="true">
       <assemblies>
-        <add assembly="UdpBinding"/>
+        <add assembly="UdpBinding" />
       </assemblies>
     </compilation>
-    <membership defaultProvider="ClientAuthenticationMembershipProvider">
-      <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri=""/>
-      </providers>
-    </membership>
-    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
-      <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400"/>
-      </providers>
-    </roleManager>
   </system.web>
   <system.serviceModel>
-    <client>
-      <metadata>
-        <wsdlImporters>
-          <extension type="UdpTransportBinding.UdpTransportElement, UdpBinding" />
-        </wsdlImporters>
-        <policyImporters>
-          <extension type="UdpTransportBinding.UdpBindingCollectionElement, UdpBinding" />
-        </policyImporters>
-      </metadata>
-    </client>
     <services>
       <service name="TransportService.TransportProtocol" behaviorConfiguration="MyBehavior">
         <endpoint name="NetTcpEndPoint" address="" binding="netTcpBinding" contract="TransportService.ITransportProtocol">
         </endpoint>
-        <endpoint name="BasicHttpBinding" address="" binding="basicHttpBinding" contract="TransportService.ITransportProtocol">
-        </endpoint>
+<!--        <endpoint name="BasicHttpBinding" address="" binding="basicHttpBinding" contract="TransportService.ITransportProtocol">
+        </endpoint>-->
         <endpoint name="NetUdpEndpoint" address="" binding="netUdpBinding" contract="TransportService.ITransportProtocol">
         </endpoint>
       </service>
@@ -51,25 +30,35 @@
     <behaviors>
       <serviceBehaviors>
         <behavior name="MyBehavior">
-          <serviceMetadata httpGetEnabled="True"/>
-          <serviceDebug includeExceptionDetailInFaults="True"/>
+          <serviceDebug includeExceptionDetailInFaults="True" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
+    <bindings>
+      <customBinding>
+        <binding name="CustomBinding_IDatagramContract">
+          <binaryMessageEncoding maxReadPoolSize="64" maxWritePoolSize="16" maxSessionSize="2048">
+            <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          </binaryMessageEncoding>
+          <UpdTransportElement maxBufferPoolSize="524288" maxMessageSize="65536" multicast="false" />
+        </binding>
+      </customBinding>
+      <NetUdpBinding>
+        <binding name="netUdpBinding" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" />
+      </NetUdpBinding>
+    </bindings>
+    <!--<client>
+      <endpoint address="soap.udp://localhost:8001/" binding="netUdpBinding" bindingConfiguration="SampleProfileUdpBinding_ICalculatorContract" contract="ICalculatorContract" name="SampleProfileUdpBinding_ICalculatorContract" />
+      <endpoint address="soap.udp://localhost:8002/datagram" binding="customBinding" bindingConfiguration="CustomBinding_IDatagramContract" contract="IDatagramContract" name="CustomBinding_IDatagramContract" />
+    </client>-->
     <extensions>
       <bindingElementExtensions>
-        <add name="netUdp" type="UdpTransportBinding.UdpTransportElement, UdpBinding"/>
+        <add name="UpdTransportElement" type="UdpTransportBinding.UdpTransportElement, UdpBinding" />
       </bindingElementExtensions>
       <bindingExtensions>
-        <add name="netUdpBinding" type="UdpTransportBinding.UdpBindingCollectionElement, UdpBinding"/>
+        <add name="NetUdpBinding" type="UdpTransportBinding.UdpBindingCollectionElement, UdpBinding" />
       </bindingExtensions>
     </extensions>
-    <!--<bindings>
-      <udpTransportBinding>
-        <binding name="config"/>
-        <udpTransport/>
-      </udpTransportBinding>
-    </bindings>-->
   </system.serviceModel>
   <userSettings>
     <WCFServiceHost.Properties.Settings>
@@ -85,6 +74,6 @@
     </WCFServiceHost.Properties.Settings>
   </userSettings>
   <startup>
-    
-  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
 </configuration>
