--- a/trunk/Kademlia/KademliaTester/KademliaTester.csproj
+++ b/trunk/Kademlia/KademliaTester/KademliaTester.csproj
@@ -104,6 +104,8 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
 </Project>
