--- a/trunk/WebServer/App.config
+++ b/trunk/WebServer/App.config
@@ -19,12 +19,11 @@
   <system.serviceModel>
     <services>
       <service name="TransportService.TransportProtocol" behaviorConfiguration="MyBehavior">
-        <endpoint name="NetTcpEndPoint" address="" binding="netTcpBinding" contract="TransportService.ITransportProtocol">
+<!--        <endpoint name="NetTcpEndPoint" address="" binding="netTcpBinding" contract="TransportService.ITransportProtocol">
         </endpoint>
-<!--        <endpoint name="BasicHttpBinding" address="" binding="basicHttpBinding" contract="TransportService.ITransportProtocol">
+        <endpoint name="BasicHttpBinding" address="" binding="basicHttpBinding" contract="TransportService.ITransportProtocol">
         </endpoint>-->
-        <endpoint name="NetUdpEndpoint" address="" binding="netUdpBinding" contract="TransportService.ITransportProtocol">
-        </endpoint>
+        <endpoint name="NetUdpEndpoint" address="" binding="netUdpBinding" contract="TransportService.ITransportProtocol" />
       </service>
     </services>
     <behaviors>
@@ -40,23 +39,23 @@
           <binaryMessageEncoding maxReadPoolSize="64" maxWritePoolSize="16" maxSessionSize="2048">
             <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           </binaryMessageEncoding>
-          <UpdTransportElement maxBufferPoolSize="524288" maxMessageSize="65536" multicast="false" />
+          <updTransportElement maxBufferPoolSize="524288" maxMessageSize="65536" multicast="false" />
         </binding>
       </customBinding>
-      <NetUdpBinding>
+      <netUdpBinding>
         <binding name="netUdpBinding" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" />
-      </NetUdpBinding>
+      </netUdpBinding>
     </bindings>
-    <!--<client>
+    <client>
       <endpoint address="soap.udp://localhost:8001/" binding="netUdpBinding" bindingConfiguration="SampleProfileUdpBinding_ICalculatorContract" contract="ICalculatorContract" name="SampleProfileUdpBinding_ICalculatorContract" />
       <endpoint address="soap.udp://localhost:8002/datagram" binding="customBinding" bindingConfiguration="CustomBinding_IDatagramContract" contract="IDatagramContract" name="CustomBinding_IDatagramContract" />
-    </client>-->
+    </client>
     <extensions>
       <bindingElementExtensions>
-        <add name="UpdTransportElement" type="UdpTransportBinding.UdpTransportElement, UdpBinding" />
+        <add name="updTransportElement" type="UdpTransportBinding.UdpTransportElement, UdpBinding" />
       </bindingElementExtensions>
       <bindingExtensions>
-        <add name="NetUdpBinding" type="UdpTransportBinding.UdpBindingCollectionElement, UdpBinding" />
+        <add name="netUdpBinding" type="UdpTransportBinding.UdpBindingCollectionElement, UdpBinding" />
       </bindingExtensions>
     </extensions>
   </system.serviceModel>
