--- a/trunk/WebServer/App.config
+++ b/trunk/WebServer/App.config
@@ -4,7 +4,52 @@
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="PeerPlayer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
+  <log4net>
+    <appender name="FApp" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="..\\..\\Resource\\p2p_player.log" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="1MB" />
+      <staticLogFileName value="true" />
+      <param name="AppendToFile" value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+      </layout>      
+    </appender>
+    <appender name="CCApp" type="log4net.Appender.ColoredConsoleAppender">
+      <mapping>
+        <level value="ERROR"></level>
+        <foreColor value="Red, HighIntensity"></foreColor>
+      </mapping>
+      <mapping>
+        <level value="DEBUG"></level>
+        <foreColor value="Cyan,HighIntensity"></foreColor>
+      </mapping>
+      <mapping>
+        <level value="INFO"></level>
+        <foreColor value="Green"></foreColor>
+      </mapping>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="CCApp"/>
+      <appender-ref ref="FApp"/>
+    </root>
+    <logger name="Raven">
+      <level value="FATAL"/>
+    </logger>
+    <logger name="Peer">
+      <level value="ALL"/>
+      <appender-ref ref="CCApp"/>
+      <appender-ref ref="FApp"/>
+    </logger>
+  </log4net>
   <appSettings>
     <add key="ThreadPoolSize" value="10" />
     <add key="ChunkLength" value="60" />
